# yp

./: AGENTS.md  Cargo.toml  README.md  TODO.md  Taskfile.yml  constants.ron
.agents/skills/yp/: SKILL.md
.cargo/: config.toml
docs/rationale/: 0001_about_yp.md  0002_mpv_ipc_fast_transcription.md  0003_pip_mode.md  0004_cli_video_summarization.md
src/: app.rs  cache.rs  cli.rs  config.rs  constants.rs  display.rs  graphics.rs  input.rs  main.rs  player.rs  summarize.rs  theme.rs  transcript.rs  ui.rs  wiki.rs  window.rs  youtube.rs
