[package]
name = "yp"
version = "0.4.2"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
base64 = "0.22.1"
clap = { version = "4.5.60", features = ["derive"] }
color_quant = "1.1.0"
directories = "6.0.0"
futures = "0.3.32"
image = "0.25.9"
ratatui = "0.30.0"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = ["full"] }
toml = "1.0.3"
unicode-width = "0.2.0"