[package]
name = "yp"
version = "0.9.3"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
base64 = "0.22.1"
chrono = "0.4.44"
clap = { version = "4.5.60", features = ["derive"] }
color_quant = "1.1.0"
directories = "6.0.0"
futures = "0.3.32"
image = "0.25.9"
libc = "0.2.182"
ratatui = "0.30.0"
reqwest = { version = "0.13.2", features = ["json", "stream"] }
ron = "0.12.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.49.0", features = ["full"] }
toml = "1.0.3"
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
unicode-width = "0.2.0"
whisper_cli = { git = "https://github.com/m1guelpf/whisper-cli-rs" }